--- a/my_first_project/index.HTML
+++ b/my_first_project/index.HTML
@@ -23,34 +23,14 @@
 
         <div class="col-sm-6 map">
             <h3>timezones</h3>
-            <ol class="timezones">
-                <li> 12</li>
-                <li> 11</li>
-                <li> 9</li>
-                <li> 8</li>
-                <li> 7</li>
-                <li> 6</li>
-                <li> 5</li>
-                <li> 4</li>
-                <li> 3</li>
-                <li> 2</li>
-                <li id="plusOne"> 1</li>
-                <li> 0</li>
-                <li> -1</li>
-                <li> -2</li>
-                <li> -3</li>
-                <li> -4</li>
-                <li> -5</li>
-                <li> -6</li>
-                <li> -7</li>
-                <li> -8</li>
-                <li> -9</li>
-                <li> -10</li>
-                <li> -11</li>
-                <li> -12</li>
-            </ol>
+            <button id="plusOne" onclick="plusOneHour()">1</button>
         </div>
+        <script>
+            function plusOneHour() {
+                moment.tz.setDefault("America/New_York");
 
+            }
+        </script>
     </section>
     <script src="Scripts/clock.js" type="text/javascript"></script>
     <script src="Scripts/moment-timezone.js" type="text/javascript"></script>
