--- a/my_first_project/index.HTML
+++ b/my_first_project/index.HTML
@@ -23,14 +23,9 @@
 
         <div class="col-sm-6 map">
             <h3>timezones</h3>
-            <button id="plusOne" onclick="plusOneHour()">1</button>
+            <button id="addHour">1</button>
         </div>
-        <script>
-            function plusOneHour() {
-                moment.tz.setDefault("America/New_York");
-
-            }
-        </script>
+        
     </section>
     <script src="Scripts/clock.js" type="text/javascript"></script>
     <script src="Scripts/moment-timezone.js" type="text/javascript"></script>
